--- a/Zalbi-frontend/src/styles/Navbar.css
+++ b/Zalbi-frontend/src/styles/Navbar.css
@@ -2,7 +2,7 @@
 .navbar {
   background-color: #000;
   color: #fff;
-  padding: 0 20px;
+  padding: 0 20px 0 60px;
   font-family: 'Uber Move', Arial, sans-serif;
   position: sticky;
   top: 0;
@@ -16,12 +16,12 @@
   justify-content: space-between;
   max-width: 1200px;
   margin: 0 auto;
-  height: 64px;
+  /* background-color: aqua; */
+  height: 60px;
 }
-
 /* Logo */
 .navbar-logo a {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: bold;
   color: #fff;
   text-decoration: none;
@@ -32,11 +32,12 @@
   display: flex;
   list-style: none;
   margin: 0;
-  padding-right: 20rem;
-  align-items: center;
+  margin-right: 20rem;
+  align-items: flex-start;
   flex: 1;
-  justify-content: center;
+  justify-content: flex-start;
   margin-left: 2rem;
+  /* background: #8b5c5c; */
 }
 
 .navbar-item {
@@ -47,7 +48,7 @@
 .navbar-link {
   color: #fff;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 12.5px;
   padding: 10px 0;
   display: flex;
   align-items: center;
