--- a/Zalbi-frontend/src/styles/Suggestions.css
+++ b/Zalbi-frontend/src/styles/Suggestions.css
@@ -1,9 +1,9 @@
 /* Suggestions.css */
 .suggestions-container {
   max-width: 1400px;
-  margin: 0 auto;
+  margin: 3rem  auto;
   padding: 0px 80px;
-  
+  /* height: 50%; */
 }
 
 .suggestions-header {
@@ -12,7 +12,7 @@
 }
 
 .suggestions-title {
-    font-size: 1.8rem;
+    font-size: 2.4rem;
     font-weight: 600;
     color: #000000;
     margin: 0;
